# mealmind

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  run
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: crud.py  exceptions.py  main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: recipes.py
backend/app/core/: config.py  db.py
backend/test/: conftest.py
backend/test/test_api/: test_recipes.py
backend/test/utils/: recipe.py
mealmind/mealmind/: asgi.py  urls.py
src/: manage.py
src/mealmind/: settings.py  wsgi.py
