[project]
name = "mealmind"
version = "0.1.0"
description = "Mealmind stores recipes, manages ingredients and gives suggestions on your next meal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.10",
]
