[project]
name = "mealmind"
version = "0.1.0"
description = "Mealmind stores recipes, manages ingredients and gives suggestions on your next meal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.25",
]
