[project]
name = "mealmind"
version = "0.1.0"
description = "Mealmind stores recipes, manages ingredients and gives suggestions on your next meal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.25",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
